Random vector reading benchmark.